# My_projects

./: .gitignore  README.md  juamarhe2002
C and C++ projects/Zoo management project/: AnimalHab.cpp  AnimalHab.h  AnimalList.cpp  AnimalList.h  CMakeLists.txt  Employee.cpp  Employee.h  EmployeeList.cpp  EmployeeList.h  Test extended (insert) AnimalList.txt  TestAnimalList.cpp  TestAnimalsCondition.cpp  TestCases.h  TestEmployeeList.cpp  TestZoo.cpp  Zoo.cpp  Zoo.h  main.cpp
Python projects/Car Workshop/: .gitignore
Python projects/Car Workshop Qt/: CW_AddEmployee.py  CW_AddParts.py  CW_CreateTicket.py  CW_DeleteTicket.py  CW_EmployeeManager.py  CW_Estimate.py  CW_FinalCost.py  CW_MainWindow.py  CW_Parts.py  CW_RemoveEmployee.py  CW_TicketManager.py  Car_Workshop.pyproject  main.py
Python projects/Car Workshop/backend/api/: models.py  permissions.py  serializer.py  urls.py  views.py
Python projects/Car Workshop/backend/api/migrations/: 0001_initial.py
Python projects/Car Workshop/backend/backend/: settings.py  urls.py
Python projects/Car Workshop/frontend/: package-lock.json  package.json
Python projects/Car Workshop/frontend/src/: App.jsx  api.js
Python projects/Car Workshop/frontend/src/components/: CreateTicketPage.jsx  EditTicketPage.jsx  EmployeeForm.jsx  Form.jsx  NavBar.jsx  Note.jsx  ProtectedRoute.jsx  TicketForm.jsx  ViewTicketPage.jsx
Python projects/Car Workshop/frontend/src/pages/: EmployeePage.jsx  Home.jsx  TicketPage.jsx
